使用 Colaboratory 创建

--- a/MATHFOUND21_1_Boqi_Chen_.ipynb
+++ b/MATHFOUND21_1_Boqi_Chen_.ipynb
@@ -1059,7 +1059,7 @@
         "import time\n",
         "from scipy.optimize import linprog\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1085,7 +1085,7 @@
       "source": [
         "def generate_circle_data_points(x_c=None, y_c=None, radius=None, outlier_ratio=None, tau=0.1, N=100):\n",
         "    # (x_c, y_c) is the center of the circle and radius is the radius of the circle\n",
-        "    # outlier_ratio: the ratio of outliers, i.e. points that don’t follow the “circle” rule at all\n",
+        "    # outlier_ratio: the ratio of outliers\n",
         "    # tau: the inlier distance threshold, in this exercise tau = 0.1\n",
         "    # N: number of points, in this exercise N=100  \n",
         "    \n",
@@ -1125,6 +1125,8 @@
         "\n",
         "    x = np.hstack((x_in, x_out))\n",
         "    y = np.hstack((y_in, y_out))\n",
+        "\n",
+        "    # shuffle the dataset\n",
         "    indices = np.array(list(range(len(x))))\n",
         "    random.shuffle(indices)\n",
         "    x = x[indices]\n",
@@ -1133,7 +1135,7 @@
         "    \n",
         "    return data"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1172,8 +1174,7 @@
       "source": [
         "def circle_fit(point_1=None, point_2=None, point_3=None):\n",
         "\n",
-        "    # circle model: a(x2 + y2) + bx + cy + 1 = 0\n",
-        "    # homogenous equation: Ax = 0 for 3 points\n",
+        "    # general circle model: a(x^2 + y^2) + bx + cy + 1 = 0\n",
         "\n",
         "    x_1 = point_1[0]\n",
         "    y_1 = point_1[1]\n",
@@ -1191,10 +1192,10 @@
         "                [x_3**2+y_3**2, x_3, y_3, 1]\n",
         "    ])\n",
         "\n",
-        "\n",
+        "    # the right null space of A gives the solution to this linear system\n",
         "    ns = null_space(A)\n",
         "\n",
-        "    coefficient = ns/ns[-1][-1] # normalize s.t. homogeneous form\n",
+        "    coefficient = ns/ns[-1][-1] # normalize\n",
         "   \n",
         "    a = coefficient[0][0]\n",
         "    b = coefficient[1][0]\n",
@@ -1212,7 +1213,7 @@
         "    return x_c_fit, y_c_fit, r_fit\n",
         "        "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1277,7 +1278,7 @@
         "    return x_c, y_c, r, inliers, outliers\n",
         "   "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1339,7 +1340,7 @@
         "\n",
         "    \n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1406,11 +1407,12 @@
         "print('Circle Center:', x_c, y_c);\n",
         "print('Circle Radius:', r);\n",
         "\n",
-        "p = 0.99\n",
-        "s = 3\n",
+        "p = 0.99 # accuracy\n",
+        "s = 3    # number of points to fit the circle\n",
         "\n",
-        "outlier_ratios = [0.05, 0.2, 0.3, 0.7]\n",
+        "outlier_ratios = [0.05, 0.2, 0.3, 0.7] # outlier ratios\n",
         "\n",
+        "# initialize the plot\n",
         "fig, axs = plt.subplots(2,4)\n",
         "fig.set_size_inches((24,12))\n",
         "\n",
@@ -1420,6 +1422,7 @@
         "  best_inliers_fit = np.zeros((0, 0))\n",
         "  inlier_counts = np.zeros((1, 1000))\n",
         "  print('------------- outlier ratio is: ', outlier_ratios[i], '--------------------')\n",
+        "  # generate data\n",
         "  data = generate_circle_data_points(x_c, y_c, r, outlier_ratios[i])\n",
         "  x = data[0, :]\n",
         "  y = data[1, :]\n",
@@ -1430,8 +1433,10 @@
         "\n",
         "    x_c_fit, y_c_fit, r_fit, inliers_fit, outliers_fit = circle_ransac(data, n_iterations, 0.1)\n",
         "    inlier_count = inliers_fit.shape[1]\n",
+        "    # store the number of inliers found in each iteration\n",
         "    inlier_counts[0][j] = inlier_count\n",
-        "          \n",
+        "\n",
+        "    # select the inliers found by the iteration which gives the largest number of inliers      \n",
         "    if inlier_count >= best_inliers_fit.shape[1]:\n",
         "\n",
         "      best_x_c_fit = x_c_fit\n",
@@ -1441,6 +1446,8 @@
         "      best_outliers_fit = outliers_fit\n",
         "\n",
         "  end = time.time()\n",
+        "\n",
+        "  # statistics of the number of inliers found by RANSAC in 1,000 iterations\n",
         "  inlier_count_mean = np.mean(inlier_counts)\n",
         "  inlier_count_max = np.max(inlier_counts)\n",
         "  inlier_count_median = np.median(inlier_counts)\n",
@@ -1454,6 +1461,7 @@
         "  print('standard deviation of inliers of RANSAC:', inlier_count_std)\n",
         "\n",
         "  start_exhaustive = time.time() \n",
+        "  # exhaustive search\n",
         "  x_c_fit_ex, y_c_fit_ex, r_fit_ex, inliers_fit_ex = exhaustive_search(data, 0.1)\n",
         "  end_exhaustive = time.time()\n",
         "  print('---------------- Exhaustive Search------------------------')\n",
@@ -1463,20 +1471,21 @@
         "\n",
         "  axs[0,i].hist(inlier_counts[0], bins=np.arange(0,100), facecolor=\"blue\", edgecolor=\"black\", alpha=0.7)\n",
         "  axs[0,i].set(xlabel='Nb of detected inliers', ylabel='Nb of experiments')\n",
+        "  # plot the inliers and outliers\n",
         "  axs[1,i].scatter(best_outliers_fit[0,:], best_outliers_fit[1,:], facecolors='none', edgecolors='r', label = 'RANSAC outliers')\n",
         "  axs[1,i].scatter(best_inliers_fit[0,:], best_inliers_fit[1,:], facecolors='none', edgecolors='b', label = 'RANSAC inliers')\n",
         "  axs[1,i].axis('equal')\n",
         "  axs[1,i].set_xlim(-10, 10)\n",
         "  axs[1,i].set_ylim(-10, 10)\n",
         "\n",
-        "  # plot the circle\n",
+        "  # plot the real and generated circle\n",
         "  circle1 = plt.Circle((x_c, y_c), r, color='g', fill=False, label='synth.model')\n",
         "  circle2 = plt.Circle((best_x_c_fit, best_y_c_fit), best_r_fit, color='black', fill=False, label='RANSAC model')\n",
         "  axs[1,i].add_patch(circle1)\n",
         "  axs[1,i].add_patch(circle2)\n",
         "  axs[1,i].legend(loc='upper left')  \n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1708,21 +1717,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gkOnKnt3ZZn-"
-      },
-      "source": [
-        "The function *generate_line_data_points* takes the model parameters, i.e., slope and y-intercept, outlier ratio, inlier distance threshold $\\tau$ (by default $\\tau=0.1$ in this exercise) and number of sample points (by default $N=100$ in this exercise) as arguments and returns the coordiantes of sampling data points including inliers and outliers. The points are generated according to: $$y=ax+b$$ where $a$ and $b$ is the slope and y-intercept of the line. Random noise in the range of $[-1,1]$ is added to the inliers. Thus, the coordinates of inliers are: $$y_i=ax_i+b+n$$ where n is therandom noise in the range of $[-1,1]$. \n",
-        "\n",
-        "To generate outliers, the points are firstly randomly sampled in the domain $[-10, 10]\\times[-10, 10]$ and then verified such that the distance between the sampled points and the line $$\\vert y-(ax+b)\\vert>\\tau$$ where $\\tau$ is the inlier distance threshold. After successfully generating the inliers and outliers, the data matrix is shuffled."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "myepgG18xLgt"
       },
       "source": [
-        "**2. IRLS and NORMS FOR LINE FITTING**"
+        "**2. IRLS and NORMS FOR LINE FITTING**\n",
+        "\n",
+        "The function *generate_line_data_points* takes the model parameters, i.e., slope and y-intercept, outlier ratio, inlier distance threshold $\\tau$ (by default $\\tau=0.1$ in this exercise) and number of sample points (by default $N=100$ in this exercise) as arguments and returns the coordiantes of sampling data points including inliers and outliers. The points are generated according to: $$y=ax+b$$ where $a$ and $b$ is the slope and y-intercept of the line. Random noise in the range of $[-1,1]$ is added to the inliers. Thus, the coordinates of inliers are: $$y_i=ax_i+b+n$$ where n is therandom noise in the range of $[-1,1]$. \n",
+        "\n",
+        "To generate outliers, the points are firstly randomly sampled in the domain $[-10, 10]\\times[-10, 10]$ and then verified such that the distance between the sampled points and the line $$\\vert y-(ax+b)\\vert>\\tau$$ where $\\tau$ is the inlier distance threshold. After successfully generating the inliers and outliers, the data matrix is shuffled."
       ]
     },
     {
@@ -1733,7 +1735,7 @@
       "source": [
         "def generate_line_data_points(a=None, b=None, outlier_ratio=None, tau=0.1, N=100):\n",
         "  # a, b are true line parameters\n",
-        "  # outlier_ratio: the ratio of outliers, i.e. points that don’t follow the “circle” rule at all\n",
+        "  # outlier_ratio: the ratio of outliers\n",
         "  # tau: the inlier distance threshold, in this exercise tau = 0.1\n",
         "  # N: number of points, in this exercise N=100 \n",
         "\n",
@@ -1821,7 +1823,7 @@
         "\\end{matrix}\n",
         "\\right]\\in\\mathbb{R}^{N\\times N}$$\n",
         "\n",
-        "Note that IRLS is an iterative optimization method so we have to initialize $x$ and $w$ at the first stage. Here we initialize $x$ as the solution of ordinary least square, i.e., the pseudo inverse of the linear system $Ax=b$. \n"
+        "Note that IRLS is an iterative optimization method so we have to initialize $x$ and $w$ at the first stage. Here we initialize $x$ as the pseudo inverse of the linear system $Ax=b$, i.e., the solution of ordinary least square method. \n"
       ]
     },
     {
@@ -1841,7 +1843,7 @@
         "  A = np.transpose(np.vstack((np.array([data[0, :]]), np.ones((1, N)))))\n",
         "  b = np.transpose(np.array([data[1, :]]))\n",
         "  \n",
-        "  # OLS initialization, set the weight to 1\n",
+        "  # initialization using pseudo inverse and set the weight to 1\n",
         "  x = np.linalg.pinv(A)@b\n",
         "\n",
         "  # initialize w\n",
